--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
   <meta name="author" content="Stephanie Cain">
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
-
-  <link rel="stylesheet" href="assets/style.css">
+  <script src ="assets/script/main.js"></script>
+  
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
+  <link rel="stylesheet" href="assets/style/main.css">
 </head>
 
 <body>
-<script>
-function revealProjects(val) {
-    $(".project").hide();
-    $("[data-job='" + val + "']").show();
-}
-</script>
 <form>
   <input type="radio" name="job" value="all" checked onchange="revealProjects(this.value)"> Show all<br>
   <input type="radio" name="job" value="CfA" onchange="revealProjects(this.value)"> Code for America<br>
