--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js" integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8=" crossorigin="anonymous"></script>
   <script src ="assets/script/main.js"></script>
-  
+
   <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/main.css">
 </head>
@@ -22,23 +22,25 @@
   <input type="radio" name="job" value="OSMRE" onchange="revealProjects(this.value)"> Office of Surface Mining Reclamation and Enforcement<br>
   <input type="radio" name="job" value="other" onchange="revealProjects(this.value)"> Other
 </form>
-<div class="project" id="workforwardNOLA" data-job="CfA" data-skills="research UX webDesign frontEnd content">
+<div class="project" id="workforwardNOLA" data-job="CfA" data-skills="research UX webDesign frontendDev content">
   <h3>Work Forward NOLA</h3>
-  <p>Understanding the complexities of the workforce system at a local level in New Orleans as well as at the State and National level was one of our biggest challenges. Because the system is difficult to navigate, many job seekers drop off when they become unsure of their next steps.</p>
-  <p>Job seekers are more successful when they work with someone who is able to connect them to necessary resources and guide them towards a career. We chose to create a tool that would engage more people to come to a job center and better prepare them in advance of their visit.</p>
+  <p>Understanding the complexities of the workforce system at a local level in New Orleans as well as at the State and National level was one of our biggest challenges. The system is difficult to navigate and many job seekers drop off when they become unsure of their next steps.</p>
+  <p>We chose to create a tool that would engage more people to come to a job center and better prepare them in advance of their visit.</p>
   <p>The information available online for the various job centers in New Orleans was sparse and spread across websites. If someone had a question or was unsure what to do, they could not find information without visiting a center.</p>
   <p>After a small print test (see One-Pager), we chose to build a mobile-first website that compiled information about each job center in one place. It also encouraged signing up for LAWorks in advance of a visit.</p>
   <p>We hoped that by better preparing someone before they went in, they would be able to spend more quality time with their career coach.</p>
 </div>
-<div class="project" id="postingPro" data-job="OSMRE" data-skills="research UX webDesign frontEnd">
+
+<div class="project" id="postingPro" data-job="CfA" data-skills="research UX webDesign frontendDev">
   <h3>PostingPro</h3>
-  <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.<p>
+  <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.</p>
   <p>As we tested the tool, we frequently found that job postings were written at a higher reading level than the job itself required. For instance, a position that required a high school degree was written at a 14th grade level (equivalent to sophomore year in college). By using complex language in a job posting, a hiring manager might be preventing a large number of qualified people from applying. This could perpetuate the hiring of over-skilled workers who are more likely to leave the position after a short period of time.</p>
   <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives. Although we found that the tool added value, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
 </div>
-<div class="project" id="personalPortfolio" data-job="other" data-skills="drawing webDesign frontEnd content">
+
+<div class="project" id="personalPortfolio" data-job="other" data-skills="drawing webDesign frontendDev content">
   <h3>Personal Portfolio</h3>
-  <p>I am redesigning my portfolio and will update this section as I progress.<p>
+  <p>I am redesigning my portfolio and will update this section as I progress.</p>
 
   <h4>Research and Brainstorming</h4>
   <p>I’d like to create something that tells a story about who I am as a designer and individual.</p>
@@ -50,13 +52,99 @@
   <p>I don’t envision that every prospective client or employer will read through every piece in its entirety. By writing a description of each project in detail, I will improve my personal brand communication in general and reflect on what I’ve accomplished.</p>
 
   <h4>Content Creation</h4>
-  <p>Now I am in the process of generating content for each project.</p>
+  <p>I began by writing about a few key pieces of work and asking for feedback from close friends and family. For each project, I identified the skill and tools used. In the future, I’d like to be able to create custom portfolios where I can quickly pull together pieces that highlight different skills. As I build the content into a website, I will custom-tag each piece so that I can easily sort them later.</p>
+  <p>Although I am still working on editing the content describing my work, I’ve  begun to develop the structure.</p>
 </div>
+
 <div class="project" id="SPRPosters" data-job="OSMRE" data-skills="research drawing printDesign content">
   <h3>SPR Posters</h3>
   <p>OSMRE (Office of Surface Mining Reclamation and Enforcement) was working to protect streams near mining operations, and needed new visual designs to raise awareness of key issues. The graphics team was asked to create seven posters that would be used as educational tools during public meetings for the Stream Protection Rule.</p>
   <p>I managed development for three of the posters: Protection of Hydrologic Balance, Revegetation, Soil and Fish and Wildlife Protection and Coal Regions. I worked with a policy expert in each area who ensured that the design accurately represented the new regulations.</p>
   <p>I started by interviewing and learning from the experts and then asked them to sketch their ideas. I refined the sketches, gathered more feedback and began building in Illustrator. I worked closely with members of OSMRE’s graphics team to ensure a cohesive brand across the different designs. We would occasionally swap files to improve details. After managing several rounds of approval, the designs were ready for print.</p>
+</div>
+
+<div class="project" id="employeeIntranet" data-job="OSMRE" data-skills="research UX webDesign frontendDev content">
+  <h3>Employee Intranet Re-Design</h3>
+  <p>The employee intranet at the Office of Surface Mining Reclamation and Enforcement (OSMRE) was an out-of-date list of links that resembled Windows Explorer. This is a common problem across government websites.</p>
+  <p>The web team saw a need for improving this important employee resource and so we began the process of a re-design. I interviewed employees about their current usage of the intranet and found that most people didn’t know it existed. If they were aware of the intranet, they rarely found it useful because the content was out-of-date.</p>
+  <p>Next we created a handful of prototypes and watched employees interact with the designs. After refining them further, we were able to pull the best parts of each into a final prototype and begin building.</p>
+
+  <h4>New Feature: Employee Directory</h4>
+  <p>When there was a change in employees, an updated phone list was printed for each staff person including contact information, position title and managers. A static PDF of OSMRE’s organizational chart accompanied the new phone list. Apart from being redundant, it was difficult to find information about someone who was not located in your immediate office.</p>
+  <p>Many staff members were using an employee directory on OSMRE’s public-facing website to access contact information. I wanted to create a feature on the employee intranet that would function both as a phone chart and an organizational chart. I chose to re-design them both to be based on the same JSON file to reduce the amount of time spent updating the two directories.</p>
+  <p>I created an excel spreadsheet with employee information and then converted to JSON. This way, someone who was not technical could update the excel spreadsheet and replace the JSON file on both the public website and employee intranet.</p>
+  <p>For the design, I created a hierarchical structure where a user could expand each region, branch and division and see the corresponding manager and employees. Clicking on an individual’s name would reveal contact information and a summary of their responsibilities.
+</div>
+
+<div class="project" id="webUpdateRequest" data-job="OSMRE" data-skills="research UX webDesign sharepoint content">
+  <h3>Web Update Request System</h3>
+  <p>The OSMRE web team was struggling both to track the work we were doing and to share the responsibility of updating all the sites. As a regulatory agency, it is important that OSMRE keeps information on public-facing websites current so as to be in compliance with SMCRA (Surface Mining Coal and Reclamation Act).</p>
+  <p>Each region had a different method of receiving web update requests and there wasn’t visibility into the process. Fellow employees who were requesting updates were frustrated because correspondence was inconsistent and deadlines were easily missed.</p>
+  <p>I designed and created a universal system for all of OSMRE that would allow someone to submit a web update request for any site and have it automatically routed to the correct person on the web team. Any time a request was updated, the requester or developer would be notified with an email. In addition, we were able to collect better data about the average time and number of requests completed so that we could continue to improve the process.</p>
+
+  <h4>User Research</h4>
+  <p>I started by interviewing people who frequently submitted web requests to better understand what was and wasn’t working. I focused on improving the system through a few key areas that came up frequently in those conversations.<p>
+
+  <h4>Creating functional automated workflows</h4>
+  <p>The existing system had workflows that emailed the requester when something changed. However, the workflows were not functioning every time and a requester had to remember to check a website to know whether or not they needed to take action. This caused some requests to be delayed in their completion.</p>
+
+  <h4>Tracking internal communication</h4>
+  <p>When a new web request was submitted, correspondence between the developer and requester happened through a variety of channels. This made it difficult for both to track the requirements and information about the request.</p>
+
+  <h4>Visibility</h4>
+  <p>Requesters often felt frustrated if a task took longer than they expected. Web developers also felt frustrated when they weren’t given enough time to complete a request. Both parties needed more visibility into the other’s workflow.</p>
+
+  <h4>Sketching</h4>
+  <p>After gathering initial research, I sketched out a full journey map of a web request and asked for feedback from both potential requesters and members of the web team. After a couple iterations, I felt confident in the process and begin building a new prototype.</p>
+
+  <h4>Prototype</h4>
+  <p>Many of the employees were accustomed to using SharePoint to submit web requests, so I chose to build upon what was already being used. Throughout the build process, I asked for feedback from key users who frequented the system. I observed them interacting with the system so that I was able to identify barriers in the design. I presented at staff meetings, teaching how to use the tool and recruiting additional feedback.</p>
+
+  <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
+</div>
+
+<div class="project" id="roar" data-job="other" data-skills="webDesign frontendDev">
+  <h3>ROAR!</h3>
+  <p>I was approached to create a website for an upcoming New Orleans band, ROAR! I started with a couple brainstorming sessions to learn what the band mates wanted for a visual brand and overall content of the site. ROAR! had an online presence and the website presented an opportunity to unite the brand on a single page. I created wireframes and design mock-ups to align us on a single direction.</p>
+  <p>Once we had agreed on a design, I began building the site before the band went on tour. A simple version of the site launched in October 2015, and I continue managing new feature development on a rolling basis.</p>
+</div>
+
+<div class="project" id="amlVideo" data-job="OSMRE" data-skills="research UX content photography videography">
+  <h3>Abandoned Mine Land Video</h3>
+  <p>I was asked to create a video that highlighted the reclamation work being done to fill a dangerous hole left by an abandoned mine an hour outside of Seattle, Washington. The video would be published on OSMRE’s YouTube channel and shared with the DOI (Department of Interior) network.</p>
+  <p>I met with the specialist in charge of the reclamation project to discuss her vision for the video. She gave me an overview of what to expect so that I could begin planning the list of shots that I wanted to capture. Together, we scheduled interviews with relevant people working on the project.</p>
+  <p>I filmed the construction to fill the hole over the course of a week. When I was finished filming, I reviewed the film and readied the footage by cutting it into clips. Next I created a storyboard to build the structure of the content and put the clips in order. Finally, I added captioning to the video and readied it for YouTube.</p>
+</div>
+
+<div class="project" id="AYPLogo" data-job="other" data-skills="drawing printDesign">
+  <h3>Logo for the Affordable Yoga Project</h3>
+  <p>I was asked to create a logo for a new donation-based yoga class. The instructor and I met in person to discuss ideas for the logo, timeframe and the final deliverable. She wanted a logo that was based off a biblical story featuring a hippo and a lotus flower.</p>
+  <p>I began by creating semantic mind maps. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the instructor the three logos and she gave feedback that allowed me to further refine into one design. I began to draw the logo digitally using Adobe Illustrator.</p>
+  <p>After another round of feedback, I gave the instructor a series of Illustrator and image files with transparent, white and black backgrounds.</p>
+</div>
+
+<div class="project" id="NHSLogo" data-job="other" data-skills="drawing printDesign">
+  <h3>Logo for North High School swim team</h3>
+  <p>I was asked to create a logo for a local high school swim team that they could use on their swimming suits, caps, and other material. The coach and I met in person to discuss ideas for the logo, timeframe and the final deliverable. He wanted a logo that was based off the school’s mascot and colors but was unique to the swimming team.</p>
+  <p>I began by creating mind maps with related words to the current schools branding. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the coach the three logos and he gave feedback that allowed me to further refine into one design. I began to draw the logo digitally by first capturing it with the mobile application, Adobe Capture and then bringing it into Adobe Illustrator.</p>
+  <p>After another round of feedback, I gave the coach a series of Illustrator and image files with transparent, white and black backgrounds.</p>
+</div>
+
+<div class="project" id="HETPoster" data-job="other" data-skills="drawing printDesign">
+  <h3>Historic Elitch Theater Poster</h3>
+  <p>I began volunteering with a local neighborhood group for the protection and preservation of the Elitch theater, Carousel pavilion and Theater plaza in Denver, Colorado. The theatre was listed on the National Register of Historic Places in 1978 and was going through renovations.</p>
+  <p>I was asked to design a poster that would be used to market the upcoming summer movies series to be held in the theater plaza. Aside from the required content and logos to be included, I was given free-range to design the poster.</p>
+  <p>I started by prioritizing the information so that I could maintain visual flow throughout the content. I sketched out some layout ideas and then began building in Adobe Illustrator. The poster was professionally printed and hung in various local restaurants and shops.<p>
+</div>
+
+<div class="project" id="weddingInvites" data-job="other" data-skills="drawing printDesign content">
+  <h3>Wedding Invitations</h3>
+  <p>I was asked to create wedding invitations for two weddings. Both couples had the invitations printed themselves.</p>
+</div>
+
+<div class="project" id="photography" data-job="other" data-skills="photography">
+  <h3>Photography</h3>
+  <p>I was asked to take photos of a local artist for use in future marketing material. I was also asked to take photos for a friends wedding rehearsal dinner.</p>
 </div>
 </body>
 </html>
