--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </form>
 <div class="project" id="workforwardNOLA" data-job="CfA" data-skills="research UX webDesign frontendDev content">
   <h3>Work Forward NOLA</h3>
+  <h4>Code for America</h4>
   <p>Understanding the complexities of the workforce system at a local level in New Orleans as well as at the State and National level was one of our biggest challenges. The system is difficult to navigate and many job seekers drop off when they become unsure of their next steps.</p>
   <p>We chose to create a tool that would engage more people to come to a job center and better prepare them in advance of their visit.</p>
   <p>The information available online for the various job centers in New Orleans was sparse and spread across websites. If someone had a question or was unsure what to do, they could not find information without visiting a center.</p>
@@ -33,6 +34,7 @@
 
 <div class="project" id="postingPro" data-job="CfA" data-skills="research UX webDesign frontendDev">
   <h3>PostingPro</h3>
+  <h4>Code for America</h4>
   <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.</p>
   <p>As we tested the tool, we frequently found that job postings were written at a higher reading level than the job itself required. For instance, a position that required a high school degree was written at a 14th grade level (equivalent to sophomore year in college). By using complex language in a job posting, a hiring manager might be preventing a large number of qualified people from applying. This could perpetuate the hiring of over-skilled workers who are more likely to leave the position after a short period of time.</p>
   <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives. Although we found that the tool added value, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
@@ -58,6 +60,7 @@
 
 <div class="project" id="SPRPosters" data-job="OSMRE" data-skills="research drawing printDesign content">
   <h3>SPR Posters</h3>
+  <h4>Office of Surface Mining Reclamation and Enforcement</h4>
   <p>OSMRE (Office of Surface Mining Reclamation and Enforcement) was working to protect streams near mining operations, and needed new visual designs to raise awareness of key issues. The graphics team was asked to create seven posters that would be used as educational tools during public meetings for the Stream Protection Rule.</p>
   <p>I managed development for three of the posters: Protection of Hydrologic Balance, Revegetation, Soil and Fish and Wildlife Protection and Coal Regions. I worked with a policy expert in each area who ensured that the design accurately represented the new regulations.</p>
   <p>I started by interviewing and learning from the experts and then asked them to sketch their ideas. I refined the sketches, gathered more feedback and began building in Illustrator. I worked closely with members of OSMRE’s graphics team to ensure a cohesive brand across the different designs. We would occasionally swap files to improve details. After managing several rounds of approval, the designs were ready for print.</p>
@@ -65,6 +68,7 @@
 
 <div class="project" id="employeeIntranet" data-job="OSMRE" data-skills="research UX webDesign frontendDev content">
   <h3>Employee Intranet Re-Design</h3>
+  <h4>Office of Surface Mining Reclamation and Enforcement</h4>
   <p>The employee intranet at the Office of Surface Mining Reclamation and Enforcement (OSMRE) was an out-of-date list of links that resembled Windows Explorer. This is a common problem across government websites.</p>
   <p>The web team saw a need for improving this important employee resource and so we began the process of a re-design. I interviewed employees about their current usage of the intranet and found that most people didn’t know it existed. If they were aware of the intranet, they rarely found it useful because the content was out-of-date.</p>
   <p>Next we created a handful of prototypes and watched employees interact with the designs. After refining them further, we were able to pull the best parts of each into a final prototype and begin building.</p>
@@ -78,6 +82,7 @@
 
 <div class="project" id="webUpdateRequest" data-job="OSMRE" data-skills="research UX webDesign sharepoint content">
   <h3>Web Update Request System</h3>
+  <h4>Office of Surface Mining Reclamation and Enforcement</h4>
   <p>The OSMRE web team was struggling both to track the work we were doing and to share the responsibility of updating all the sites. As a regulatory agency, it is important that OSMRE keeps information on public-facing websites current so as to be in compliance with SMCRA (Surface Mining Coal and Reclamation Act).</p>
   <p>Each region had a different method of receiving web update requests and there wasn’t visibility into the process. Fellow employees who were requesting updates were frustrated because correspondence was inconsistent and deadlines were easily missed.</p>
   <p>I designed and created a universal system for all of OSMRE that would allow someone to submit a web update request for any site and have it automatically routed to the correct person on the web team. Any time a request was updated, the requester or developer would be notified with an email. In addition, we were able to collect better data about the average time and number of requests completed so that we could continue to improve the process.</p>
@@ -111,6 +116,7 @@
 
 <div class="project" id="amlVideo" data-job="OSMRE" data-skills="research UX content photography videography">
   <h3>Abandoned Mine Land Video</h3>
+  <h4>Office of Surface Mining Reclamation and Enforcement</h4>
   <p>I was asked to create a video that highlighted the reclamation work being done to fill a dangerous hole left by an abandoned mine an hour outside of Seattle, Washington. The video would be published on OSMRE’s YouTube channel and shared with the DOI (Department of Interior) network.</p>
   <p>I met with the specialist in charge of the reclamation project to discuss her vision for the video. She gave me an overview of what to expect so that I could begin planning the list of shots that I wanted to capture. Together, we scheduled interviews with relevant people working on the project.</p>
   <p>I filmed the construction to fill the hole over the course of a week. When I was finished filming, I reviewed the film and readied the footage by cutting it into clips. Next I created a storyboard to build the structure of the content and put the clips in order. Finally, I added captioning to the video and readied it for YouTube.</p>
