--- a/index.html
+++ b/index.html
@@ -30,6 +30,39 @@
   <p>The information available online for the various job centers in New Orleans was sparse and spread across websites. If someone had a question or was unsure what to do, they could not find information without visiting a center.</p>
   <p>After a small print test (see One-Pager), we chose to build a mobile-first website that compiled information about each job center in one place. It also encouraged signing up for LAWorks in advance of a visit.</p>
   <p>We hoped that by better preparing someone before they went in, they would be able to spend more quality time with their career coach.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>UX
+      <ul>
+        <li>Conducting user interviews</li>
+        <li>Conducting user testing</li>
+        <li>Compiling and sharing findings with broader team</li>
+      </ul>
+    </li>
+    <li>Moderating design sprints</li>
+    <li>Agile design</li>
+    <li>Collaborative design</li>
+    <li>Visual design - Web</li>
+    <li>Wire-framing</li>
+    <li>Agile development</li>
+    <li>Front-end development</li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+    <li>Community Outreach</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Usertesting.com</li>
+    <li>Balsamiq</li>
+    <li>Adobe Illustrator</li>
+    <li>InVision</li>
+    <li>GitHub</li>
+    <li>Atom</li>
+    <li>SASS frameworks: Bourbon, Neat, Bitters, Refils</li>
+  </ul>
 </div>
 
 <div class="project" id="postingPro" data-job="CfA" data-skills="research UX webDesign frontendDev">
@@ -38,6 +71,37 @@
   <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.</p>
   <p>As we tested the tool, we frequently found that job postings were written at a higher reading level than the job itself required. For instance, a position that required a high school degree was written at a 14th grade level (equivalent to sophomore year in college). By using complex language in a job posting, a hiring manager might be preventing a large number of qualified people from applying. This could perpetuate the hiring of over-skilled workers who are more likely to leave the position after a short period of time.</p>
   <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives. Although we found that the tool added value, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>UX
+      <ul>
+        <li>Conducting user interviews</li>
+        <li>Conducting user testing</li>
+        <li>Compiling and sharing findings with broader team</li>
+      </ul>
+    </li>
+    <li>Moderating design sprints</li>
+    <li>Agile design</li>
+    <li>Collaborative design</li>
+    <li>Visual design - Web</li>
+    <li>Wire-framing</li>
+    <li>Agile development</li>
+    <li>Front-end development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Balsamiq</li>
+    <li>Sketch</li>
+    <li>Adobe Illustrator</li>
+    <li>InVision</li>
+    <li>GitHub</li>
+    <li>Atom</li>
+    <li>SASS frameworks: Bourbon, Neat, Bitters, Refils</li>
+  </ul>
 </div>
 
 <div class="project" id="personalPortfolio" data-job="other" data-skills="drawing webDesign frontendDev content">
@@ -56,6 +120,22 @@
   <h4>Content Creation</h4>
   <p>I began by writing about a few key pieces of work and asking for feedback from close friends and family. For each project, I identified the skill and tools used. In the future, I’d like to be able to create custom portfolios where I can quickly pull together pieces that highlight different skills. As I build the content into a website, I will custom-tag each piece so that I can easily sort them later.</p>
   <p>Although I am still working on editing the content describing my work, I’ve  begun to develop the structure.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Drawing</li>
+    <li>Visual design - Web</li>
+    <li>Wire-framing</li>
+    <li>Front-end development</li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+    <li>GitHub</li>
+    <li>Atom</li>
+  </ul>
 </div>
 
 <div class="project" id="SPRPosters" data-job="OSMRE" data-skills="research drawing printDesign content">
@@ -64,6 +144,21 @@
   <p>OSMRE (Office of Surface Mining Reclamation and Enforcement) was working to protect streams near mining operations, and needed new visual designs to raise awareness of key issues. The graphics team was asked to create seven posters that would be used as educational tools during public meetings for the Stream Protection Rule.</p>
   <p>I managed development for three of the posters: Protection of Hydrologic Balance, Revegetation, Soil and Fish and Wildlife Protection and Coal Regions. I worked with a policy expert in each area who ensured that the design accurately represented the new regulations.</p>
   <p>I started by interviewing and learning from the experts and then asked them to sketch their ideas. I refined the sketches, gathered more feedback and began building in Illustrator. I worked closely with members of OSMRE’s graphics team to ensure a cohesive brand across the different designs. We would occasionally swap files to improve details. After managing several rounds of approval, the designs were ready for print.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>Drawing</li>
+    <li>Collaborative design</li>
+    <li>Visual Design - Print</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+    <li>Community outreach</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
 </div>
 
 <div class="project" id="employeeIntranet" data-job="OSMRE" data-skills="research UX webDesign frontendDev content">
@@ -78,6 +173,30 @@
   <p>Many staff members were using an employee directory on OSMRE’s public-facing website to access contact information. I wanted to create a feature on the employee intranet that would function both as a phone chart and an organizational chart. I chose to re-design them both to be based on the same JSON file to reduce the amount of time spent updating the two directories.</p>
   <p>I created an excel spreadsheet with employee information and then converted to JSON. This way, someone who was not technical could update the excel spreadsheet and replace the JSON file on both the public website and employee intranet.</p>
   <p>For the design, I created a hierarchical structure where a user could expand each region, branch and division and see the corresponding manager and employees. Clicking on an individual’s name would reveal contact information and a summary of their responsibilities.
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>UX
+      <ul>
+        <li>Conducting user interviews</li>
+        <li>Conducting user testing</li>
+        <li>Compiling and sharing findings with broader team</li>
+      </ul>
+    </li>
+    <li>Visual Design - Web</li>
+    <li>Wire-framing</li>
+    <li>Front-end Development</li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+    <li>Adobe Dreamweaver</li>
+    <li>Microsoft Excel</li>
+    <li>CSV - JSON converter</li>
+  </ul>
 </div>
 
 <div class="project" id="webUpdateRequest" data-job="OSMRE" data-skills="research UX webDesign sharepoint content">
@@ -106,12 +225,48 @@
   <p>Many of the employees were accustomed to using SharePoint to submit web requests, so I chose to build upon what was already being used. Throughout the build process, I asked for feedback from key users who frequented the system. I observed them interacting with the system so that I was able to identify barriers in the design. I presented at staff meetings, teaching how to use the tool and recruiting additional feedback.</p>
 
   <p>Eventually, the tool was comprehensive enough to be used as the first version of a universal web request submission system. I taught the remaining web developers how to maintain the new system before I left to join Code for America as a 2016 fellow.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>UX</li>
+      <ul>
+        <li>Conducting user interviews</li>
+        <li>Conducting user testing</li>
+        <li>Compiling and sharing findings with broader team</li>
+      </ul>
+    </li>
+    <li>Visual Design - Web</li>
+    <li>Wire-framing</li>
+    <li>SharePoint development</li>
+    <li>Information architecture</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe InDesign</li>
+    <li>Sharepoint Designer</li>
+    <li>InfoPath</li>
+  </ul>
 </div>
 
 <div class="project" id="roar" data-job="other" data-skills="webDesign frontendDev">
   <h3>ROAR!</h3>
   <p>I was approached to create a website for an upcoming New Orleans band, ROAR! I started with a couple brainstorming sessions to learn what the band mates wanted for a visual brand and overall content of the site. ROAR! had an online presence and the website presented an opportunity to unite the brand on a single page. I created wireframes and design mock-ups to align us on a single direction.</p>
   <p>Once we had agreed on a design, I began building the site before the band went on tour. A simple version of the site launched in October 2015, and I continue managing new feature development on a rolling basis.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Visual Design - Web</li>
+    <li>Wire-framing</li>
+    <li>Front-end development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+    <li>Adobe Dreamweaver</li>
+  </ul>
 </div>
 
 <div class="project" id="amlVideo" data-job="OSMRE" data-skills="research UX content photography videography">
@@ -120,6 +275,30 @@
   <p>I was asked to create a video that highlighted the reclamation work being done to fill a dangerous hole left by an abandoned mine an hour outside of Seattle, Washington. The video would be published on OSMRE’s YouTube channel and shared with the DOI (Department of Interior) network.</p>
   <p>I met with the specialist in charge of the reclamation project to discuss her vision for the video. She gave me an overview of what to expect so that I could begin planning the list of shots that I wanted to capture. Together, we scheduled interviews with relevant people working on the project.</p>
   <p>I filmed the construction to fill the hole over the course of a week. When I was finished filming, I reviewed the film and readied the footage by cutting it into clips. Next I created a storyboard to build the structure of the content and put the clips in order. Finally, I added captioning to the video and readied it for YouTube.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>UX
+      <ul>
+        <li>Conducting user interviews</li>
+        <li>Conducting user testing</li>
+        <li>Compiling and sharing findings with broader team</li>
+      </ul>
+    </li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+    <li>Photography and editing</li>
+    <li>Videography and editing</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Microsoft Office</li>
+    <li>Adobe Photoshop</li>
+    <li>Adobe Premiere</li>
+    <li>Adobe Media Encoder</li>
+  </ul>
 </div>
 
 <div class="project" id="AYPLogo" data-job="other" data-skills="drawing printDesign">
@@ -127,6 +306,17 @@
   <p>I was asked to create a logo for a new donation-based yoga class. The instructor and I met in person to discuss ideas for the logo, timeframe and the final deliverable. She wanted a logo that was based off a biblical story featuring a hippo and a lotus flower.</p>
   <p>I began by creating semantic mind maps. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the instructor the three logos and she gave feedback that allowed me to further refine into one design. I began to draw the logo digitally using Adobe Illustrator.</p>
   <p>After another round of feedback, I gave the instructor a series of Illustrator and image files with transparent, white and black backgrounds.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Drawing</li>
+    <li>Visual Design - Print</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
 </div>
 
 <div class="project" id="NHSLogo" data-job="other" data-skills="drawing printDesign">
@@ -134,6 +324,17 @@
   <p>I was asked to create a logo for a local high school swim team that they could use on their swimming suits, caps, and other material. The coach and I met in person to discuss ideas for the logo, timeframe and the final deliverable. He wanted a logo that was based off the school’s mascot and colors but was unique to the swimming team.</p>
   <p>I began by creating mind maps with related words to the current schools branding. This exercise helped me brainstorm different visual representations of the subject matter. Next I sketched out several variations of the logo with pencil and pen, and narrowed down to three to move forward with. I showed the coach the three logos and he gave feedback that allowed me to further refine into one design. I began to draw the logo digitally by first capturing it with the mobile application, Adobe Capture and then bringing it into Adobe Illustrator.</p>
   <p>After another round of feedback, I gave the coach a series of Illustrator and image files with transparent, white and black backgrounds.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Drawing</li>
+    <li>Visual Design - Print</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
 </div>
 
 <div class="project" id="HETPoster" data-job="other" data-skills="drawing printDesign">
@@ -141,16 +342,51 @@
   <p>I began volunteering with a local neighborhood group for the protection and preservation of the Elitch theater, Carousel pavilion and Theater plaza in Denver, Colorado. The theatre was listed on the National Register of Historic Places in 1978 and was going through renovations.</p>
   <p>I was asked to design a poster that would be used to market the upcoming summer movies series to be held in the theater plaza. Aside from the required content and logos to be included, I was given free-range to design the poster.</p>
   <p>I started by prioritizing the information so that I could maintain visual flow throughout the content. I sketched out some layout ideas and then began building in Adobe Illustrator. The poster was professionally printed and hung in various local restaurants and shops.<p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Drawing</li>
+    <li>Visual Design - Print</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
 </div>
 
 <div class="project" id="weddingInvites" data-job="other" data-skills="drawing printDesign content">
   <h3>Wedding Invitations</h3>
   <p>I was asked to create wedding invitations for two weddings. Both couples had the invitations printed themselves.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Drawing</li>
+    <li>Visual Design - Print</li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
 </div>
 
 <div class="project" id="photography" data-job="other" data-skills="photography">
   <h3>Photography</h3>
   <p>I was asked to take photos of a local artist for use in future marketing material. I was also asked to take photos for a friends wedding rehearsal dinner.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Stakeholder management</li>
+    <li>Photography and editing</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Photoshop</li>
+  </ul>
 </div>
 </body>
 </html>
