--- a/index.html
+++ b/index.html
@@ -138,6 +138,79 @@
   </ul>
 </div>
 
+<div class="project" id="onePager" data-job="CfA" data-skills="research printDesign frontendDev content">
+  <p>At the beginning of our fellowship in New Orleans, we learned of a one-pager that provided information about services at Opportunity Centers. It was the only marketing material used and was often overlooked by job seekers. I re-designed the one-pager for the city and wrote a blog-post about my process for the Code for America website.</p>
+  <h3>How to design user-focused information</h3>
+  <p>The process of looking for a job can be isolating and daunting for anyone. Add additional barriers such as previous incarceration, low literacy, or inability to use a computer, and the search becomes nearly impossible. In New Orleans, job seekers can find supportive resources no matter their barriers at any of five Opportunity Centers.</p>
+  <p>Opportunity Centers receive clients through word of mouth and by recommendation of an Outreach Partner (an affiliated group that is embedded in the community). Unfortunately, there is a lack of trust between Opportunity Centers and Outreach Partners, resulting in low numbers of job seekers entering the system.</p>
+  <p>We wanted to test whether improving the communications about Opportunity Centers would result in more job seekers utilizing the services offered. We chose to re-design a one-pager that described each of the Opportunity Centers and was displayed at libraries, YMCAs, and other locations throughout the city.</p>
+
+  <h4>Approach and results</h4>
+  <h5>Design process</h5>
+
+  <h6>Step one: Analysis</h6>
+  <p><i>Simplify and streamline content</i></p>
+  <p>I analyzed the content and found it to be at a 13th grade reading level, much higher than the average adult’s 7th/8th grade reading level. We needed to make the content more accessible for a larger number of job seekers.</p>
+  <p><i>Describe location of each center</i></p>
+  <p>Job seekers choose which Opportunity Center to visit based on the location of the center, so I prioritized that information.</p>
+  <p><i>Create a strong visual flow</i></p>
+  <p>The information about each Opportunity Center is uniformly sized and arranged to have equal visual weight. The design treats information from each Opportunity Center equally but it is difficult for a reader’s eyes to move smoothly from one part to the next.</p>
+  <p><i>Strong visual design that works in grayscale</i></p>
+  <p>Some Outreach Partners only have access to a black and white printer, so it was important to create a design that would work in grayscale and color.</p>
+  <p><i>Actionable first step</i></p>
+  <p>A job seeker should know exactly what step they need to take to access these resources and work towards employment.</p>
+  <p><i>Request more information</i></p>
+  <p>If a job seeker needed additional information that wasn’t present on the poster, we created a channel for them to find out more.</p>
+
+  <h6>Step two: design small, receive feedback</h6>
+  <p>The poster went through many design changes as I sought out and incorporated feedback from key stakeholders throughout New Orleans.</p>
+  <p>I printed out the different iterations of the poster and taped them to a wall to replicate the way a job seeker would interact with it. By doing this, I was able to identify and resolve readability issues that weren’t as obvious in digital format.</p>
+  <p>As I designed the poster, the team focused on guiding the job seeker through a journey that followed a clear visual line through the poster:</p>
+  <ol>
+    <li>Interest: Bold heading draws job seeker in.
+    <li>Inclusion: Job seeker realizes that services are available to them no matter their barriers and finds additional reason to engage.</li>
+    <li>Important Details: Job seeker is given the location, phone number and specific services for each Opportunity Center. They are also given instructions on what to bring on their first visit.</li>
+    <li>Additional Information: If the job seeker has questions, they are given the ability to engage further through text message. We would answer the text messages individually as they came in so we could better understand the needs and motivations of job seekers.</li>
+  </ol>
+
+  <h6>Step three: put it into practice</h6>
+  <p>The final poster was written at a 6th grade reading level, provided an actionable first step, and a channel for additional communication. We placed the poster at three different Outreach Partner centers with different phone numbers so we would know where people were texting from.</p>
+
+  <h5>Repeat our process</h5>
+  <p>You can do this too! Here are a few tips to help improve information that you’re sharing with the public.</p>
+  <p><i>Focus on the person who will be viewing the content</i></p>
+  <p>Imitate the environment where the information will be displayed. If you are designing a printed poster, make sure to print it out beforehand so that you can visualize what it will look like in its final format.</p>
+  <p>When redesigning a poster, here are a couple questions you can ask yourself,</p>
+  <ul>
+    <li>How much time does this person have to spend engaging with the poster?</li>
+    <li>What is the environment where it will be shared?</li>
+    <li>What’s the one thing they should know after reading the content?</li>
+  </ul>
+
+  <p><i>Simplify content and include a call to action</i></p>
+  <p>As an expert developing content, it’s natural to want to provide as much information as possible to our reader. However, the person viewing the content can easily become overwhelmed by a lot of text. Pair it down as much as possible by focusing on one or two reasons for the reader to engage. Remove anything that does not support those goals.</p>
+  <p>It’s easy to become attached to what we’ve written. This is a great time to request feedback from others. Ask a coworker or the intended audience to look over the poster and give you their thoughts.</p>
+  <p>Finally, there are many tools you can use to determine the reading level of your text, and this is a great way to understand how inclusive the content is. Check your Readability Score at <a href="https://readability-score.com/" target="_blank">https://readability-score.com/</a>.</p>
+
+  <p><i>Visual Flow</i></p>
+  <p>After you’ve created a first draft, print it out and try this exercise: Draw a line through the information from the place where you want a reader to start to the place where you want them to finish. You are not allowed to lift your pen off the paper. If you can’t draw a clear line through the content, it probably has an issue with visual flow. Remember that we generally read from top to bottom and left to right.</p>
+  <p>It’s important that you clearly guide your viewer through the content so that they don’t lose interest or get confused.</p>
+
+  <h4>Skills used</h4>
+  <ul>
+    <li>Subject matter research</li>
+    <li>Visual design - Print</li>
+    <li>Content development</li>
+    <li>Information architecture</li>
+    <li>Stakeholder management</li>
+    <li>Community outreach</li>
+  </ul>
+  <h4>Tools used</h4>
+  <ul>
+    <li>Adobe Illustrator</li>
+  </ul>
+</div>
+
 <div class="project" id="SPRPosters" data-job="OSMRE" data-skills="research drawing printDesign content">
   <h3>SPR Posters</h3>
   <h4>Office of Surface Mining Reclamation and Enforcement</h4>
