--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <header>
+    <img id="profilePic" src="assets/images/scProfile.jpg" alt="Stephanie Cain's profile picture"/>
     <h1>My name is Stephanie Cain. I am a web designer and I love solving puzzles.</h1>
     <p>I am working as a 2016 fellow at Code for America tackling economic development issues. My team is partnering with the City of New Orleans to develop tools to connect job seekers, training providers, and employers in the workforce system.</p>
   </header>
