--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <li class="nav-link"><a href="javascript:void(0)" title="Contact">Contact</a></li>
         </ul>
       </nav>
-      <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open/Close Menu</a>
+      <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
+      <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
   <header>
