Added font awesome
For social media icons

--- a/index.html
+++ b/index.html
@@ -31,27 +31,22 @@
   </div>
   <header>
     <img id="profilePic" src="assets/images/scProfile.png" alt="Stephanie Cain's profile picture"/>
-    <h1>My name is Stephanie Cain. I am a web designer and I love solving puzzles.</h1>
-    <p>I am working as a 2016 fellow at Code for America tackling economic development issues. My team is partnering with the City of New Orleans to develop tools to connect job seekers, training providers, and employers in the workforce system.</p>
+    <h1>My name is Stephanie Cain. I am a product designer and I develop user focused civic technology.</h1>
+    <div class="social-media">
+      <ul>
+        <li class="activeHex"><a href="#" target="_blank" title="Stephanie Cain's LinkedIn"></a></li>
+        <li></li>
+        <li><a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+</a></li>
+        <li class="activeHex"><a href="https://github.com/skcain" target="_blank" title="Stephanie Cain's Github"><i class="fa fa-github-square" aria-hidden="true"></i>
+</a></li>
+        <li><a href="https://twitter.com/sc_create" target="_blank" title="Stephanie Cain's Twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+</a></li>
+      </ul>
+    </div>
+    <p>My experience in the public sector has equipped me with expertise in government design, user engagement and workforce. I enjoy building relationships with people and creating growth opportunties for under-served communities.</p>
   </header>
   <section id="projects">
-    <div class="sortBy">
-      <form>
-        <input type="radio" name="job" value="all" checked onchange="sortJob(this.value)"> Show all<br>
-        <input type="radio" name="job" value="CfA" onchange="sortJob(this.value)"> Code for America<br>
-        <input type="radio" name="job" value="OSMRE" onchange="sortJob(this.value)"> Office of Surface Mining Reclamation and Enforcement<br>
-        <input type="radio" name="job" value="other" onchange="sortJob(this.value)"> Other
-      </form>
-      <form>
-        <input type="radio" name="type" value="all" checked onchange="sortType(this.value)"> Show all<br>
-        <input type="radio" name="type" value="web" onchange="sortType(this.value)"> Web<br>
-        <input type="radio" name="type" value="print" onchange="sortType(this.value)"> Print<br>
-        <input type="radio" name="type" value="branding" onchange="sortType(this.value)"> Branding<br>
-        <input type="radio" name="type" value="photo" onchange="sortType(this.value)"> Photography<br>
-        <input type="radio" name="type" value="video" onchange="sortType(this.value)"> Videography
-      </form>
-      <div class="clearfix"></div>
-    </div>
     <div class="project" id="workforwardNOLA" data-job="CfA" data-type="web">
       <h3>Work Forward NOLA</h3>
       <h4>Code for America</h4>
