--- a/index.html
+++ b/index.html
@@ -49,41 +49,51 @@
   </header>
   <section id="recentProjects">
     <h2>Recent Projects</h2>
-    <div class="project" id="workforwardNOLA">
-      <h3>Work Forward NOLA</h3>
-      <h4>Code for America</h4>
-      <p>Understanding the complexities of the workforce system at a local level in New Orleans as well as at the State and National level was one of our biggest challenges. The system is difficult to navigate and many job seekers drop off when they become unsure of their next steps.</p>
-      <p>We chose to create a tool that would engage more people to come to a job center and better prepare them in advance of their visit.</p>
-      <p>The information available online for the various job centers in New Orleans was sparse and spread across websites. If someone had a question or was unsure what to do, they could not find information without visiting a center.</p>
-      <p>After a small print test (see One-Pager), we chose to build a mobile-first website that compiled information about each job center in one place. It also encouraged signing up for LAWorks in advance of a visit.</p>
-      <p>We hoped that by better preparing someone before they went in, they would be able to spend more quality time with their career coach.</p>
-    </div>
 
-    <div class="project" id="postingPro">
-      <h3>PostingPro</h3>
-      <h4>Code for America</h4>
-      <p>A couple days after being placed on the New Orleans team, we began building an online tool that would identify bias in job postings. The initial iteration was built upon two open-source libraries. The first flagged words based on three categories of unconscious bias, and the second determined the equivalent grade reading level for a block of text.</p>
-      <p>As we tested the tool, we frequently found that job postings were written at a higher reading level than the job itself required. For instance, a position that required a high school degree was written at a 14th grade level (equivalent to sophomore year in college). By using complex language in a job posting, a hiring manager might be preventing a large number of qualified people from applying. This could perpetuate the hiring of over-skilled workers who are more likely to leave the position after a short period of time.</p>
-      <p>Over the next couple months we continued to refine and test the tool with hiring managers and HR representatives. Although we found that the tool added value, we needed to better understand the hiring process so that we could integrate the tool without adding extra work.</p>
-    </div>
+    <a href="#" title="Learn more about Work Forward NOLA">
+      <div class="project" id="workforwardNOLA">
+        <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
+        <h3>Work Forward NOLA</h3>
+        <p>A mobile-first website to assist job seekers in New Orleans navigate the workforce system.</p>
+      </div>
+    </a>
 
-    <div class="project" id="personalPortfolio">
-      <h3>Personal Portfolio</h3>
-      <p>I am redesigning my portfolio and will update this section as I progress.</p>
+    <a href="#" title="Learn more about Posting Pro">
+      <div class="project" id="postingPro">
+        <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
+        <h3>Posting Pro</h3>
+        <p>A job posting creation tool to help employers attract the right candidaties with inclusive, skills-based hiring.</p>
+      </div>
+    </a>
 
-      <h4>Research and Brainstorming</h4>
-      <p>I’d like to create something that tells a story about who I am as a designer and individual.</p>
-      <p>The beginning of my design process always begins with research. In this instance, it involved self-reflection on who I am and what I’ve accomplished. A UX designer lead me in an exercise called Branding Deck so that I could build a semantic word list of my personal brand. I used Pinterest, Niice and Google Images to look for visual representations of the words and began to organize them into a map.</p>
-      <p>This helped me narrow my focus and develop a message that I would share throughout my portfolio.</p>
-
-      <h4>Outline</h4>
-      <p>I looked at the work I’ve completed and began to curate based on how it supported my personal brand and story. I decided to develop content for each piece and compiled an outline to create a cohesive flow from one project to the next.</p>
-      <p>I don’t envision that every prospective client or employer will read through every piece in its entirety. By writing a description of each project in detail, I will improve my personal brand communication in general and reflect on what I’ve accomplished.</p>
-
-      <h4>Content Creation</h4>
-      <p>I began by writing about a few key pieces of work and asking for feedback from close friends and family. For each project, I identified the skill and tools used. In the future, I’d like to be able to create custom portfolios where I can quickly pull together pieces that highlight different skills. As I build the content into a website, I will custom-tag each piece so that I can easily sort them later.</p>
-      <p>Although I am still working on editing the content describing my work, I’ve  begun to develop the structure.</p>
-    </div>
+    <a href="#" title="Learn more about my process creating an online portfolio">
+      <div class="project" id="personalPortfolio">
+        <div class="logoWrap"><img src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon"/></div>
+        <h3>Personal Portfolio</h3>
+        <p>A mobile-first website that describes the process of my recent work.</p>
+      </div>
+    </a>
+    <div class="clearfix"></div>
   </section>
+  <section id="process">
+    <h2>Process</h2>
+    <p>When I work on a project, I’m driven to continue learning throughout every stage of the process. I begin with independent research and competitive analysis to better understand the context around the problem.</p>
+    <p>Next, and most importantly, I listen to the people who already use or potentially will engage with the system. By building relationships, I can expand upon existing expertise and uncover perspectives that impact my own approach.</p>
+    <p>Communicating those learnings to my team helps us collaboratively brainstorm needs, assumptions and tests that lead to user-centered solutions.</p>
+  </section>
+  <footer>
+    <div class="social-media">
+      <ul>
+        <li class="activeHex"><a href="https://www.linkedin.com/in/skcain" target="_blank" title="Stephanie Cain's LinkedIn"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+</a></li>
+        <li>&nbsp;</li>
+        <li class="activeHex"><a href="https://github.com/skcain" target="_blank" title="Stephanie Cain's Github"><i class="fa fa-github-square" aria-hidden="true"></i>
+</a></li>
+        <li>&nbsp;</li>
+        <li class="activeHex"><a href="https://twitter.com/sc_create" target="_blank" title="Stephanie Cain's Twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 </html>
