--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src ="assets/script/main.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200italic,300,300italic,400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style/main.css">
+  <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
-          <li class="nav-link"><a href="javascript:void(0)" title="Home Page">Home</a></li>
+          <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
           <li class="nav-link"><a href="javascript:void(0)" title="Resume">Resume</a></li>
           <li class="nav-link"><a href="javascript:void(0)" title="Contact">Contact</a></li>
         </ul>
@@ -50,7 +50,7 @@
   <section id="recentProjects">
     <h2>Recent Projects</h2>
 
-    <a href="#" title="Learn more about Work Forward NOLA">
+    <a href="work-forward-nola.html" title="Learn more about Work Forward NOLA">
       <div class="project" id="workforwardNOLA">
         <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
         <h3>Work Forward NOLA</h3>
