Added Posting Pro page
Linked from home page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </a>
 
-    <a href="#" title="Learn more about Posting Pro">
+    <a href="posting-pro.html" title="Learn more about Posting Pro">
       <div class="project" id="postingPro">
         <div class="logoWrap"><img src="assets/images/cfa-logo.png" title="Code for America Logo" alt="Code for America Logo"/></div>
         <h3>Posting Pro</h3>
