Added portfolio page
Edited styling on H2, H3, H4

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </a>
 
-    <a href="#" title="Learn more about my process creating an online portfolio">
+    <a href="portfolio.html" title="Learn more about my process creating an online portfolio">
       <div class="project" id="personalPortfolio">
         <div class="logoWrap"><img src="assets/images/portfolio-icon.png" title="Personal Portfolio Icon" alt="Personal Portfolio Icon"/></div>
         <h3>Personal Portfolio</h3>
