Added work in progress bar
To footer

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </a></li>
       </ul>
     </div>
+    <div class="in-progress">This website is a work in progress. If you have comments, please send me an email <a href="mailto:aunaprendoad@gmail.com" title="Email Stephanie Cain">here</a>.</div>
   </footer>
 </body>
 </html>
