--- a/posting-pro.html
+++ b/posting-pro.html
@@ -21,8 +21,8 @@
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
           <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-          <li class="nav-link"><a href="javascript:void(0)" title="Resume">Resume</a></li>
-          <li class="nav-link"><a href="javascript:void(0)" title="Contact">Contact</a></li>
+          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
+          <li class="nav-link"><a href="contact.html" title="Contact">Contact</a></li>
         </ul>
       </nav>
       <a href="javascript:void(0)" id="nav-open" class="centered-navigation-mobile-menu" onclick="menuToggle()">Open Menu</a>
