--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
       <nav role="navigation">
         <ul id="js-centered-navigation-menu" class="centered-navigation-menu show">
           <li class="nav-link"><a href="index.html" title="Home Page">Home</a></li>
-          <li class="nav-link"><a href="javascript:void(0)" title="Resume">Resume</a></li>
+          <li class="nav-link"><a href="resume.html" title="Resume">Resume</a></li>
           <li class="nav-link"><a href="javascript:void(0)" title="Contact">Contact</a></li>
         </ul>
       </nav>
