--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body>
+<body id="primary">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -31,7 +31,7 @@
   </div>
   <div class="hexBG"></div>
   <header>
-    <img id="profilePic" src="assets/images/scProfile.png" alt="Stephanie Cain's profile picture"/>
+    <img id="hex-image" src="assets/images/scProfile.png" alt="Stephanie Cain's profile picture"/>
     <h1>My name is Stephanie Cain.<br>I am a product designer and I<br> develop user focused civic technology.</h1>
     <div class="social-media">
       <ul>
