--- a/posting-pro.html
+++ b/posting-pro.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body>
+<body id="secondary">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -29,6 +29,8 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
+  <div class="hexBG"></div>
+  <img id="hex-image" src="assets/images/cfa-logo.png" alt="Code for America logo"/>
   <section id="project-container">
     <h2>Posting Pro</h2>
     <a class="projectLink" href="https://posting-pro.herokuapp.com/" title="Posting Pro" target="_blank">https://posting-pro.herokuapp.com/</a>
