--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body>
+<body id="secondary">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
