--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body>
+<bod id="secondary" class="portfolio">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -29,6 +29,8 @@
       <a href="javascript:void(0)" id="nav-close" class="centered-navigation-mobile-menu" onclick="menuToggle()">Close Menu</a>
     </div>
   </div>
+  <div class="hexBG"></div>
+  <img id="hex-image" src="assets/images/portfolio-icon.png" alt="Blue abstract icon"/>
   <section id="project-container">
     <h2>Online Portfolio Process</h2>
     <a class="projectLink" href="https://skcain.github.io/index.html" title="Personal Portfolio" target="_blank">https://skcain.github.io/index.html</a>
