--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
 
-<body id="secondary">
+<body id="secondary" class="resume">
   <div class="centered-navigation" role="banner">
     <div class="centered-navigation-wrapper">
       <nav role="navigation">
@@ -34,52 +34,61 @@
       <a href="resume.pdf" title="Download resume" target="_blank" class="basic-button basic-button-outline center">Download resume</a>
     </div>
     <h2>Resume</h2>
-    <p>I have 10 years of professional experience and 4 years of industry experience.</p>
+    <p class="center">I have 10 years of professional experience and 4 years of industry experience.</p>
 
-    <h3>2016 Fellow</h3>
-    <h4>Code for America</h4>
-    <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
+    <div id="fellow">
+      <img src="assets/images/cfa-logo.png" alt="Code for America logo"/>
+      <h3>2016 Fellow</h3>
+      <h4>Code for America</h4>
+      <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
+        <ul>
+          <li>UX researcher, designer and co-front-end developer,</li>
+          <li>Researching workforce system and unemployment benefits,</li>
+          <li>Designing print material and web-based interfaces, and</li>
+          <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
+        </ul>
+    </div>
+
+    <div id="vis">
+      <img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
+      <h3>Visual Information Specialist</h3>
+      <h4>Office of Surface Mining Reclamation and Enforcement</h4>
+      <p>I participated in the Graphics, Web and Video Development teams to create internal and external-facing publications in support of the bureau’s mission. I also worked to redesign internal-facing systems to improve efficiency and better serve users.</p>
+      <p><strong>Web</strong></p>
       <ul>
-        <li>UX researcher, designer and co-front-end developer,</li>
-        <li>Researching workforce system and unemployment benefits,</li>
-        <li>Designing print material and web-based interfaces, and</li>
-        <li>Working directly with city officials to improve job seeker engagement with the workforce system.</li>
+        <li>Two major website re-designs and basic maintenance of existing websites, and</li>
+        <li>Improved accessibility/508 compliance and SEO of existing websites.</li>
       </ul>
 
-    <h3>Visual Information Specialist</h3>
-    <h4>Office of Surface Mining Reclamation and Enforcement</h4>
-    <p>I participated in the Graphics, Web and Video Development teams to create internal and external-facing publications in support of the bureau’s mission. I also worked to redesign internal-facing systems to improve efficiency and better serve users.</p>
-    <p><strong>Web</strong></p>
-    <ul>
-      <li>Two major website re-designs and basic maintenance of existing websites, and</li>
-      <li>Improved accessibility/508 compliance and SEO of existing websites.</li>
-    </ul>
-
-    <p><strong>Graphics</strong></p>
-    <ul>
-      <li>Developed several large printed posters for public meetings,
-      <li>Contributed to design of two re-designed logos, and
-      <li>Developed printed marketing material for educational purposes.</li>
-  </ul>
-
-    <p><strong>Video Development</strong></p>
-    <ul>
-      <li>Captured and edited video to highlight an Abandoned Mine Land (AML) project.</li>
-    </ul>
-
-    <p><strong>System Design</strong></p>
-    <ul>
-      <li>Created a universal web request system, and
-      <li>Developed an online dynamic employee organizational chart with contact information.</li>
-    </ul>
-
-    <h3>Web Design Intern</h3>
-    <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
-    <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
+      <p><strong>Graphics</strong></p>
       <ul>
-        <li>Created print, web and media documents in support of public outreach and internal affairs</li>
-        <li>Supported online training by helping to develop, edit and produce videos</li>
+        <li>Developed several large printed posters for public meetings,
+        <li>Contributed to design of two re-designed logos, and
+        <li>Developed printed marketing material for educational purposes.</li>
       </ul>
+
+      <p><strong>Video Development</strong></p>
+      <ul>
+        <li>Captured and edited video to highlight an Abandoned Mine Land (AML) project.</li>
+      </ul>
+
+      <p><strong>System Design</strong></p>
+      <ul>
+        <li>Created a universal web request system, and
+        <li>Developed an online dynamic employee organizational chart with contact information.</li>
+      </ul>
+    </div>
+
+    <div id="intern">
+      <img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
+      <h3>Web Design Intern</h3>
+      <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
+      <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
+        <ul>
+          <li>Created print, web and media documents in support of public outreach and internal affairs</li>
+          <li>Supported online training by helping to develop, edit and produce videos</li>
+        </ul>
+    </div>
   </section>
   <footer>
     <div class="social-media">
