--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
     <p class="center">I have 10 years of professional experience and 4 years of industry experience.</p>
 
     <div id="fellow">
-      <img src="assets/images/cfa-logo.png" alt="Code for America logo"/>
+      <a href="http://www.codeforamerica.org" title="Code for America Website" target="_blank"><img src="assets/images/cfa-logo.png" alt="Code for America logo"/></a>
       <h3>2016 Fellow</h3>
       <h4>Code for America</h4>
       <p>I am working on a team of three with the City of New Orleans on workforce development projects. We’re building digital tools that assist employers in finding better-matched candidates, and prepare and connect job seekers to careers.</p>
@@ -50,7 +50,7 @@
     </div>
 
     <div id="vis">
-      <img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
+      <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/></a>
       <h3>Visual Information Specialist</h3>
       <h4>Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I participated in the Graphics, Web and Video Development teams to create internal and external-facing publications in support of the bureau’s mission. I also worked to redesign internal-facing systems to improve efficiency and better serve users.</p>
@@ -80,7 +80,7 @@
     </div>
 
     <div id="intern">
-      <img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/>
+      <a href="http://www.osmre.gov" title="Office of Surface Mining Reclamation and Enforcement Website" target="_blank"><img src="assets/images/osmre-logo.png" alt="Office of Surface Mining Reclamation and Enforcement logo"/></a>
       <h3>Web Design Intern</h3>
       <h4>AmeriCorps/Office of Surface Mining Reclamation and Enforcement</h4>
       <p>I worked at the Office of Surface Mining Reclamation and Enforcement to assist with web and graphic development. Worked with the web team to begin redesign of national and regional websites.</p>
